--- a/style.css
+++ b/style.css
@@ -1,54 +1,209 @@
+@import url(utility.css);
 
-*{
-    margin:0;
+:root{
+    --white:rgba(255,255,255,0.5);
+  }
+  
+  * {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-body{
-    font-family:  Inter, sans-serif;
-    background-color: #7a7adb;
-    background-image:linear-gradient(277deg,#602f60 0%, #170e13 74%);
-    color:white;
-    min: height 100vh;
-}
-
-header,
-main,
-footer{
-    padding: 12px;
-}
-a{
+    font-family: inter;
+  }
+  
+  body {
+    background: #0e1922;
+    background: linear-gradient(135deg, #20394d, #321112);
+    color: #fff;
+  }
+  
+  header,
+  main,
+  footer {
+    padding: 20px;
+  }
+  
+  a {
     color: white;
     text-decoration: none;
-}
-.flex{
-    display: flex;
-}
-header{
-    justify-content: center;
-}
-nav p,
-nav a{
+  }
+  
+  
+  nav p,
+  nav a:link,
+  nav button {
+    margin: 5px;
+    color: var(--white);
+  }
+  
+  nav p,
+  nav a {
     padding: 7px;
-}
-nav button{
+  }
+  
+  nav a:link {
+    margin-right: -15px;
+  }
+  
+  nav svg{
+    margin: 10px;
+  }
+  
+  header nav svg:hover{
+    transform:translate(2px,-2px)
+  }
+  
+  nav button {
     padding: 5px;
     border-radius: 20px;
     height: 30px;
     font-weight: 700;
     border: none;
-    color:rgba(255,255,255,0.327) ;
-    background-color: rgba(255,255,255,0.327);
-
-}
-
-nav button:hover{
+    color: rgba(255, 255, 255, 0.532);
+    background-color: rgba(255, 255, 255, 0.327);
+  }
+  
+  nav button:hover {
     background-color: #ffffff96;
     color: #00000095;
-}
-
-nav a{
+  }
+  
+  nav a {
     text-decoration: none;
-
-}
+    color: #fff;
+  }
+  
+  nav svg{
+    margin: 10px;
+  }
+  
+  header svg {
+    height: 20px;
+    color: rgba(255, 255, 255, 0.212);
+    transition: 1s;
+    cursor: pointer;
+  }
+  
+  header svg:hover{
+    color: white;
+    transform: scale(1.2);
+  }
+  
+  @media screen and (max-width: 650px) {
+    header p{
+      display: none;
+    }
+    
+  }
+  
+  .left {
+    flex-basis: 40%;
+    display: flex;
+    align-items: start;
+    flex-direction: column;
+    gap: 20px;
+    margin: 10% 0 10% 10%;
+    /* justify-content: center; */
+  }
+  
+  .left svg {
+    height: 30px;
+    color: rgba(255, 255, 255, 0.534);
+  }
+  
+   .left p {
+    font-weight: 400;
+  }
+  
+  .left h1 {
+    font-weight: 600;
+    font-size: 50px;
+    line-height: 1;
+  }
+  
+  .left p {
+    font-size: 25px;
+  }
+  
+  .left span {
+    background: radial-gradient(
+      circle at top left,
+      #099ef1 0%,
+      #6863f8 18.82%,
+      #d84ffa 32.6%,
+      #f058c5 52.83%,
+      #ff4f90 68.03%,
+      #ff6558 87.66%,
+      #ff891f 100%
+    );
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  
+  .left button {
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    border: none;
+  }
+  
+  @media screen and (max-width:757px) {
+    .left{
+      justify-content: center;
+      align-items: center;
+      
+    }
+    
+  }
+  
+  .right {
+    flex-basis: 60%;
+  }
+  
+  .right video {
+    width: 100%;
+  }
+  
+  @media screen and (max-width:757px) {
+    main{
+      flex-direction: column;
+      gap:30px;
+    }
+    
+  }
+  
+  footer {
+    border-top: 1px solid rgba(255, 255, 255, 0.216);
+    width: 70%;
+    margin-left: 15%;
+  }
+  
+  footer .primary {
+    color: #ffffff29;
+    margin-bottom: 25px;
+    /* flex-wrap: wrap; */
+  }
+  
+  .text_links a {
+    margin: 10px;
+  }
+  
+  .text_links a svg {
+    width: 50px;
+  }
+  
+  .icon_links a {
+    margin: 10px;
+  }
+  
+  footer .secondary a{
+      color: rgba(255, 255, 255, 0.247);
+      font-size: 15px;
+  }
+  
+  .secondary a {
+    margin: 10px;
+  }
+  
+  
