--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   
   body {
     background: #0e1922;
-    background: linear-gradient(135deg, #20394d, #321112);
+    background: linear-gradient(135deg, #183349, #321112);
     color: #fff;
   }
   
